--- a/css/resume.css
+++ b/css/resume.css
@@ -36,10 +36,12 @@ h1 {
 
 h2 {
   font-size: 3.5rem;
+  text-transform: uppercase;
 }
 
 h3 {
   font-size: 2rem;
+  text-transform: lowercase;
   text-transform: capitalize;
 }
 
